[metadata]
name = fontawesome
version = attr: fontawesome.__version__
author = Carson Sievert
author_email = carson@rstudio.com
url = https://github.com/rstudio/py-fontawesome
description = An interface to Font-Awesome for use in Shiny.
long_description = file: README.md
keywords = fontawesome
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Text Processing :: Markup :: HTML
project_urls =
    Bug Tracker = https://github.com/rstudio/py-fontawesome/issues
    Source Code = https://github.com/rstudio/py-fontawesome

[options]
python_requires = >=3.7
packages = find:
test_suite = tests
include_package_data = True
install_requires =
    htmltools
tests_require =
    pytest>=3
zip_safe = False

[options.packages.find]
include = fontawesome, fontawesome.*

[options.package_data]
shiny = py.typed


[flake8]
exclude = docs
