[metadata]
name = fontawesome
version = attr: fontawesome.__version__
author = Carson Sievert
author_email = carson@rstudio.com
url = https://github.com/rstudio/py-fontawesome
description = An interface to Font-Awesome for use in Shiny.
long_description = file: README.md
keywords = fontawesome
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Text Processing :: Markup :: HTML
project_urls =
    Bug Tracker = https://github.com/rstudio/py-fontawesome/issues
    Source Code = https://github.com/rstudio/py-fontawesome

[options]
python_requires = >=3.7
packages = find:
test_suite = tests
include_package_data = True
install_requires =
    htmltools
tests_require =
    pytest>=3
zip_safe = False

[options.packages.find]
include = fontawesome, fontawesome.*

[options.package_data]
fontawesome = py.typed


[flake8]
# E302: Expected 2 blank lines
# E501: Line too long
# F403: 'from module import *' used; unable to detect undefined names
# F405: Name may be undefined, or defined from star imports
# W503: Line break occurred before a binary operator
ignore = E302, E501, F403, F405, W503
exclude = docs
